# serializer version: 1
# name: test_person
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "tests",
      "unit_tests",
      "load",
      "test_dump",
      "Person"
    ],
    "kwargs": {
      "secret": {
        "lc": 1,
        "type": "secret",
        "id": [
          "SECRET"
        ]
      },
      "you_can_see_me": "hello"
    }
  }
  '''
# ---
# name: test_person.1
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "my",
      "special",
      "namespace",
      "SpecialPerson"
    ],
    "kwargs": {
      "secret": {
        "lc": 1,
        "type": "secret",
        "id": [
          "SECRET"
        ]
      },
      "you_can_see_me": "hello",
      "another_secret": {
        "lc": 1,
        "type": "secret",
        "id": [
          "ANOTHER_SECRET"
        ]
      },
      "another_visible": "bye"
    }
  }
  '''
# ---
# name: test_person_with_kwargs
  '{"lc":1,"type":"constructor","id":["tests","unit_tests","load","test_dump","Person"],"kwargs":{"secret":{"lc":1,"type":"secret","id":["SECRET"]},"you_can_see_me":"hello"}}'
# ---
# name: test_serialize_llmchain
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "chains",
      "llm",
      "LLMChain"
    ],
    "kwargs": {
      "prompt": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "prompts",
          "prompt",
          "PromptTemplate"
        ],
        "kwargs": {
          "input_variables": [
            "name"
          ],
          "template": "hello {name}!",
          "template_format": "f-string"
        },
        "name": "PromptTemplate"
      },
      "llm": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "llms",
          "openai",
          "OpenAI"
        ],
        "kwargs": {
          "model_name": "davinci",
          "temperature": 0.5,
          "max_tokens": 256,
          "top_p": 1.0,
          "n": 1,
          "best_of": 1,
          "openai_api_key": {
            "lc": 1,
            "type": "secret",
            "id": [
              "OPENAI_API_KEY"
            ]
          },
          "openai_proxy": "",
          "batch_size": 20,
          "max_retries": 2,
          "disallowed_special": "all"
        },
        "name": "OpenAI"
      },
      "output_key": "text",
      "output_parser": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "output_parser",
          "StrOutputParser"
        ],
        "kwargs": {},
        "name": "StrOutputParser"
      },
      "return_final_only": true
    },
    "name": "LLMChain"
  }
  '''
# ---
# name: test_serialize_llmchain_chat
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "chains",
      "llm",
      "LLMChain"
    ],
    "kwargs": {
      "prompt": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "prompts",
          "chat",
          "ChatPromptTemplate"
        ],
        "kwargs": {
          "input_variables": [
            "name"
          ],
          "messages": [
            {
              "lc": 1,
              "type": "constructor",
              "id": [
                "langchain",
                "prompts",
                "chat",
                "HumanMessagePromptTemplate"
              ],
              "kwargs": {
                "prompt": {
                  "lc": 1,
                  "type": "constructor",
                  "id": [
                    "langchain",
                    "prompts",
                    "prompt",
                    "PromptTemplate"
                  ],
                  "kwargs": {
                    "input_variables": [
                      "name"
                    ],
                    "template": "hello {name}!",
                    "template_format": "f-string"
                  },
                  "name": "PromptTemplate"
                }
              }
            }
          ]
        },
        "name": "ChatPromptTemplate"
      },
      "llm": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "chat_models",
          "openai",
          "ChatOpenAI"
        ],
        "kwargs": {
          "model_name": "davinci",
          "temperature": 0.5,
          "openai_api_key": {
            "lc": 1,
            "type": "secret",
            "id": [
              "OPENAI_API_KEY"
            ]
          },
          "openai_proxy": "",
          "max_retries": 2,
          "n": 1
        },
        "name": "ChatOpenAI"
      },
      "output_key": "text",
      "output_parser": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "output_parser",
          "StrOutputParser"
        ],
        "kwargs": {},
        "name": "StrOutputParser"
      },
      "return_final_only": true
    },
    "name": "LLMChain"
  }
  '''
# ---
# name: test_serialize_llmchain_with_non_serializable_arg
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "chains",
      "llm",
      "LLMChain"
    ],
    "kwargs": {
      "prompt": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "prompts",
          "prompt",
          "PromptTemplate"
        ],
        "kwargs": {
          "input_variables": [
            "name"
          ],
          "template": "hello {name}!",
          "template_format": "f-string"
        },
        "name": "PromptTemplate"
      },
      "llm": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "llms",
          "openai",
          "OpenAI"
        ],
        "kwargs": {
          "model_name": "davinci",
          "temperature": 0.5,
          "max_tokens": 256,
          "top_p": 1.0,
          "n": 1,
          "best_of": 1,
          "openai_api_key": {
            "lc": 1,
            "type": "secret",
            "id": [
              "OPENAI_API_KEY"
            ]
          },
          "openai_proxy": "",
          "batch_size": 20,
          "max_retries": 2,
          "disallowed_special": "all"
        },
        "name": "OpenAI"
      },
      "output_key": "text",
      "output_parser": {
        "lc": 1,
        "type": "constructor",
        "id": [
          "langchain",
          "schema",
          "output_parser",
          "StrOutputParser"
        ],
        "kwargs": {},
        "name": "StrOutputParser"
      },
      "return_final_only": true
    },
    "name": "LLMChain"
  }
  '''
# ---
# name: test_serialize_openai_llm
  '''
  {
    "lc": 1,
    "type": "constructor",
    "id": [
      "langchain",
      "llms",
      "openai",
      "OpenAI"
    ],
    "kwargs": {
      "model_name": "davinci",
      "temperature": 0.7,
      "max_tokens": 256,
      "top_p": 1.0,
      "n": 1,
      "best_of": 1,
      "openai_api_key": {
        "lc": 1,
        "type": "secret",
        "id": [
          "OPENAI_API_KEY"
        ]
      },
      "openai_proxy": "",
      "batch_size": 20,
      "max_retries": 2,
      "disallowed_special": "all"
    },
    "name": "OpenAI"
  }
  '''
# ---
